JBoss MaxPermGen java options problem with new Java spec (subject to change). https://sourceforge.net/forum/message.php?msg_id=7281143 BF [2779124]